@@ -36,15 +36,6 @@
  */
 package fr.gouv.vitamui.iam.external.client;
 
-import java.nio.file.Path;
-import java.util.AbstractMap;
-import java.util.Collections;
-import java.util.Optional;
-
-import org.springframework.http.HttpMethod;
-import org.springframework.web.multipart.MultipartFile;
-import org.springframework.web.reactive.function.client.WebClient;
-
 import fr.gouv.vitamui.commons.api.exception.BadRequestException;
 import fr.gouv.vitamui.commons.api.logger.VitamUILogger;
 import fr.gouv.vitamui.commons.api.logger.VitamUILoggerFactory;
@@ -54,6 +45,15 @@ import fr.gouv.vitamui.iam.common.dto.CustomerCreationFormData;
 import fr.gouv.vitamui.iam.common.dto.CustomerDto;
 import fr.gouv.vitamui.iam.common.dto.CustomerPatchFormData;
 import fr.gouv.vitamui.iam.common.rest.RestApi;
+import org.springframework.http.HttpMethod;
+import org.springframework.web.multipart.MultipartFile;
+import org.springframework.web.reactive.function.client.WebClient;
+
+import java.nio.file.Path;
+import java.util.AbstractMap;
+import java.util.Collections;
+import java.util.Map;
+import java.util.Optional;
 
 /**
  * External WebClient for Customer operations.
@@ -82,7 +82,7 @@ public class CustomerExternalWebClient extends BaseWebClient<ExternalHttpContext
         }
 
         return multiparts(getUrl(), HttpMethod.POST, context,
-            Collections.singletonMap("customerDto", customerCreationFormData.getCustomerDto()),
+            Map.of("customerDto", customerCreationFormData.getCustomerDto(), "tenantName", customerCreationFormData.getTenantName()),
             customerCreationFormData.getHeader().isPresent() ? Optional.of(new AbstractMap.SimpleEntry<>("header", customerCreationFormData.getHeader().get())) : Optional.empty(),
             customerCreationFormData.getFooter().isPresent() ? Optional.of(new AbstractMap.SimpleEntry<>("footer", customerCreationFormData.getFooter().get())) : Optional.empty(),
             customerCreationFormData.getPortal().isPresent() ?  Optional.of(new AbstractMap.SimpleEntry<>("portal", customerCreationFormData.getPortal().get())) : Optional.empty(),
